# ivshmem-guest-code

./: .gitignore  CMakeLists.txt
ivshmem-server/: ivshmem_server.c
